--- a/src/charts/pie-chart/index.html
+++ b/src/charts/pie-chart/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Line chart</title>
+    <title>Pie chart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="./chart-script.js" defer></script>
