--- a/src/reading-data-example/index.html
+++ b/src/reading-data-example/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bubble chart</title>
+    <title>Line chart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="./chart-script.js" defer></script>
   </head>
   <body>
-    <canvas id="myChart" width="1000" height="700"></canvas>
+    <canvas id="myChart" width="1000" height="550"></canvas>
   </body>
 </html>
