Creación del Kmeans para BubbleChart

--- a/www/bubble-chart-example1.html
+++ b/www/bubble-chart-example1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LineChart Example1 - Pernoctations in Tenerife</title>
+    <title>Performance Example</title>
     <meta charset="UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
-    <script type="module" src="../src/charts/line-chart/line-chart-script.js" defer></script>
+    <script type="module" src="../src/charts/bubble-chart-example1/bubble-chart-script.js" defer></script>
   </head>
   <body>
     <h1><a href="./Index.html">HOME</a></h1>
