--- a/www/Index.html
+++ b/www/Index.html
@@ -8,7 +8,7 @@
   <body>
     <h1><a href="https://www.chartjs.org/docs/latest/samples/line/line.html"> Performance example</a></h1>
     <h1><a href="./bar-chart-example1.html"> Bad practices using charts</a></h1>
-    <h1><a href="./line-chart-example1.html"> Overnight stays in Tenerife through the years</a></h1>
+    <h1><a href="./line-chart-example1.html"> Overnight stays in Tenerife through the years using a line chart</a></h1>
     <h1><a href="./radar-chart-example1.html"> Displaying player stats using a radar chart</a></h1>
     <h1><a href="./bubble-chart-example1.html"> Displaying the result of Kmeans using a bubble chart</a></h1>
   </body>
