Empezando el scatter chart

--- a/www/Index.html
+++ b/www/Index.html
@@ -11,5 +11,6 @@
     <h1><a href="./line-chart-example1.html"> Overnight stays in Tenerife through the years using a line chart</a></h1>
     <h1><a href="./radar-chart-example1.html"> Displaying player stats using a radar chart</a></h1>
     <h1><a href="./bubble-chart-example1.html"> Displaying the result of Kmeans using a bubble chart</a></h1>
+    <h1><a href="./scatter-chart-example1.html"> Displaying the result of Kmeans using a bubble chart</a></h1>
   </body>
 </html>
