--- a/www/bubble-chart-example1.html
+++ b/www/bubble-chart-example1.html
@@ -8,7 +8,7 @@
     <script type="module" src="../src/charts/bubble-chart-example1/bubble-chart-script.js" defer></script>
   </head>
   <body>
-    <h1><a href="./Index.html">HOME</a></h1>
+    <h1><a href="./index.html">HOME</a></h1>
      <div class="chart-container">
        <canvas id="myChart"></canvas>
     </div>
