--- a/www/pie-chart-example1.html
+++ b/www/pie-chart-example1.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BarChart Example 1 - Bad Practices</title>
+    <title>PieChart Example1 - Usage comparations of Tenerife ports</title>
     <meta charset="UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
-    <script type="module" src="../src/charts/bar-chart-example1/bar-chart-script.js" defer></script>
+    <script type="module" src="../src/charts/pie-chart-example1/pie-chart-script.js" defer></script>
   </head>
   <body>
     <h1><a href="./index.html">HOME</a></h1>
