--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,8 @@
     <h1><a href="./line-chart-example1.html"> Overnight stays in Tenerife through the years using a line chart</a></h1>
     <h1><a href="./radar-chart-example1.html"> Displaying player stats using a radar chart</a></h1>
     <h1><a href="./pie-chart-example1.html"> Usage comparations of Tenerife ports using a pie chart</a></h1>
-    <h1><a href="./pie-chart-example2.html"> Alcobendas City Council budget distribution doughnut chart</a></h1>
+    <h1><a href="./pie-chart-example2.html"> Alcobendas city council budget distribution using a doughnut chart</a></h1>
+    <h1><a href="./polar-area-chart-example1.html"> Electoral results of tenerife 2019 using a polar area chart</a></h1>
     <h1><a href="./bubble-chart-example1.html"> Displaying the result of Kmeans using a bubble chart</a></h1>
     <h1><a href="./scatter-chart-example1.html"> Displaying the result of Kmeans using a bubble chart</a></h1>
   </body>
