Creación del segundo ejemplo de barChart

--- a/www/bar-chart-example2.html
+++ b/www/bar-chart-example2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Performance Example</title>
+    <title>BarChart Example2 - GDP of different countries through the years</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/styles.css">
-    <script type="module" src="../src/charts/scatter-chart-example1/scatter-chart-script.js" defer></script>
+    <script type="module" src="../src/charts/bar-chart-example2/bar-chart-script.js" defer></script>
   </head>
   <body>
     <h1><a href="./index.html">HOME</a></h1>
