Creado ejemplo de mixed Chart

--- a/www/index.html
+++ b/www/index.html
@@ -15,5 +15,6 @@
     <h1><a href="./pie-chart-example2.html"> Alcobendas city council budget distribution using a doughnut chart</a></h1>
     <h1><a href="./polar-area-chart-example1.html"> Electoral results of tenerife 2019 using a polar area chart</a></h1>
     <h1><a href="./bubble-chart-example1.html"> Displaying the result of Kmeans using a bubble chart</a></h1>
+    <h1><a href="./mixed-chart-example.html"> Combining two charts to create a mixed chart</a></h1>
   </body>
 </html>
